--- a/style.css
+++ b/style.css
@@ -66,7 +66,9 @@ body {
     max-width: 50%;
 }
 .biography{
-    padding: 1.4rem, 7%,;
-    margin-top:30rem;
-    
+    padding: 10rem, 7%,;
+    padding-top: 70px;
+    font-size: 3rem;
+    display: flex;
+    justify-content: center;
 }
