--- a/style.css
+++ b/style.css
@@ -66,9 +66,81 @@ body {
     max-width: 50%;
 }
 .biography{
-    padding: 10rem, 7%,;
+    padding:1.4rem ,7%,;
     padding-top: 70px;
-    font-size: 3rem;
+   
+} 
+.judul {
     display: flex;
     justify-content: center;
+    align-items: center;
+    font-size: 2.5 rem;
+    font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    color:hsl(180, 71%, 32%); ;
+}
+
+.bio {
+    padding: 2% 7%;
+    font-size: medium;
+    display:flex;
+    justify-content: space-between;
+    align-items: center;
+    letter-spacing: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    color: rgba(240, 248, 255, 0.696);
+}
+
+.judul2{
+    padding: 4.4rem 7% 1rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2.5;
+    color:hsl(180, 71%, 32%);
+}
+
+.karir1 {
+    display: flex;
+    padding: 0 4% 0 1rem;
+    letter-spacing: 1px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    color: rgba(240, 248, 255, 0.696);
+}
+
+.gambar {
+    padding: 0 0 0 6%;
+    height: 5px;  
+}
+
+.karir2{
+    display: flex;
+    padding: 3rem 7%;
+}
+
+.content2 {
+   padding-top: 3rem;
+   letter-spacing: 1px;
+   font-family: Arial, Helvetica, sans-serif;
+   font-size: medium;
+   color: rgba(240, 248, 255, 0.696);
+}
+
+.image { 
+    height: 2px;
+    padding-top: 3rem;
+}
+.karir3 {
+    display: flex;
+    padding-left: 1.4rem;
+}
+
+.content3{
+    padding: 5rem 7% 0 1rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    color: rgba(240, 248, 255, 0.696);
+    letter-spacing: 1px;
+
 }
