--- a/style.css
+++ b/style.css
@@ -102,58 +102,177 @@ body {
 
 .karir1 {
     display: flex;
-    padding: 0 4% 0 1rem;
+    padding: 0 7%;
     letter-spacing: 1px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     color: rgba(240, 248, 255, 0.696);
 }
+
+.karir1 p{
+    padding-left: 1rem  ;
+}
+
+
 
 .gambar {
     padding: 0 0 0 6%;
     height: 5px;  
 }
 
-.karir2{
+.karir2 {
     display: flex;
-    padding: 3rem 7%;
-}
-
-.content2 {
-   padding-top: 3rem;
-   letter-spacing: 1px;
-   font-family: Arial, Helvetica, sans-serif;
-   font-size: medium;
-   color: rgba(240, 248, 255, 0.696);
-}
-
-.image { 
-    height: 2px;
-    padding-top: 3rem;
-}
-.karir3 {
-    display: flex;
-    padding-left: 1.4rem;
-}
-
-.content3{
-    padding: 5rem 7% 0 1rem;
+    padding: 5px 7%;
+    letter-spacing: 1px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
     color: rgba(240, 248, 255, 0.696);
+}
+
+.karir3 {
+    display: flex;
+    padding: 0px 7%;
     letter-spacing: 1px;
-    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+    color: rgba(240, 248, 255, 0.696);
+}
+
+.karir3 p {
+    padding-left: 1rem;
+    padding-top: 0;
 }
 
 .karir4{
     display: flex;
-    padding: 6rem 7%;
+    padding: 1rem 7%;
     color: rgba(240, 248, 255, 0.696);
     letter-spacing: 1px;
     justify-content: space-between;
     font-family: Arial, Helvetica, sans-serif;
     font-size: medium;
 }
-.image2 img {
-    padding: 1px 0 0 1rem ;
+.karir4 img {
+    padding-left: 1rem ;
+}
+
+.karir5{
+    display: flex;
+    padding: 0 7%;
+    color: rgba(240, 248, 255, 0.696);
+    letter-spacing: 1px;
+    justify-content: space-between;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: medium;
+}
+
+.karir5 p {
+    padding-left: 1rem;
+}
+
+.video h2 {
+    padding-top: 7.7rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2.5;
+    color:hsl(180, 71%, 32%);
+}
+
+.video1 {
+    padding: 1.7rem 7%;
+    display: flex;
+    gap: 20px;
+    align-items: center;
+}
+
+.contact h2 {
+    padding-top: 2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    font-size: 2.5;
+    color:hsl(180, 71%, 32%);
+}
+.social {
+    padding: 3rem 7%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.social a:hover {
+    background-color: hsl(180, 71%, 32%);
+    border-radius: 5px;
+    padding: 5px 5px;
+ 
+}
+
+.fa-youtube {
+    font-size: 100px;
+    color:rgb(241, 237, 231);
+    
+}
+.fa-spotify {
+    font-size: 100px;
+    color:rgb(241, 237, 231);
+}
+
+.fa-instagram {
+    font-size: 100px;
+    color: rgb(241, 237, 231);
+}
+.fa-x-twitter {
+    font-size: 100px;
+    color: rgb(241, 237, 231);;
+}
+@media only screen and (max-width: 720px){ 
+    .karir1 {
+        display: flex;
+        flex-wrap: wrap;
+        padding: 0 7rem;
+        
+    }
+    .karir1 img {
+        width: 100%; 
+        
+    }
+
+    .karir2 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .karir2 img {
+        width: 100%;
+    }
+    .karir3 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .karir3 img {
+        width: 100%;
+    }
+    .karir4 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .karir4 img {
+        width: 100%;
+    }
+    .karir5 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+    .karir5 img {
+        width: 100%;
+    }
+
+    .video1 {
+        display: flex;
+        flex-wrap: wrap;
+    }
+   
 }
